fix: fix style alignments in cohort

--- a/src/app/features/cohorts/list-cohorts/list-cohorts.component.scss
+++ b/src/app/features/cohorts/list-cohorts/list-cohorts.component.scss
@@ -8,7 +8,6 @@
     min-width: 1350px;
     display: flex;
     justify-content: center;
-    overflow-y: scroll;
     padding-top: 1.8rem; 
  
     .no-cohorts { 
@@ -81,7 +80,6 @@
         & .list-wrapper {
             width: 100%;
             height: 60vh;
-            overflow-y: hidden;
 
             & .headers {
                 font-family: $font-lato;
